--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
+DB_HOST=caboose.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=idpmivenezuela
-DB_PORT=3306
+DB_PASSWORD=UfXpNwrhtAOxTzBDmQkMhrZRyITqvFjF
+DB_NAME=railway
+DB_PORT=15986
 PORT=5050
